--- a/index.css
+++ b/index.css
@@ -1,3 +1,15 @@
+.container {
+    align-content: center;
+}
+
+.col {
+    border: 1px solid rgba(0,0,0,0.5);
+}
+
+.row {
+    margin-top: 1em;
+}
+
 .inner {
     background: silver;
     padding: 0.7 em;
